# envmgr

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  Manifest  PROJECT_ENV  README.md  TODO.md  ansible.cfg  autopushtoGithub.sh  cliff.toml  demo-task.yml  demo.yaml  deploy.sh  entry.yaml  entry.yml  index.html  init.sh  init.yaml  install-zsh.sh  install.sh  login.html  main.yaml  master.yml  pyproject.toml  readme.md  requirements.yaml  scripts.py  test.sh  ubuntu_reset.sh  update_local_zsh.sh  vars.yaml
.claude/commands/: ansible-check.md  commit-msg.md  create-role.md  dev-workflow.md  install-test.md  list-tags.md  ping-test.md  python-check.md  quality-check.md  setup-project.md
.github/e2e/: docker-compose.yml
.github/e2e/ssh-node/: Dockerfile  entrypoint.sh
.github/scripts/: check-e2e-compose.sh  run-master-worker-e2e.sh
.github/workflows/: auto-tag.yml  ci.yml  release.yml
apt/: debian_11
deploy_tools/: deploy.sh
dev-helpers/: pyproject.toml
dev-helpers/dev_helpers/: __init__.py
dir2/: app2.js
docker/: install-docker.sh
docs/: development.md  release.md  runtime.md
hosts/: README.md  hosts_cron.sh  set_hosts_cron.sh
include/: README.md  common.sh  sources.list
init/: install_python.yaml  pyenv.sh  sshkey.yaml
install/cpp/: main
install/docker/: install_ubuntu_docker.sh  main
install/golang/: main
install/k8s/: main
install/node/: install_nvm.sh  main
install/python/: main
install/ruby/: main
install/ssh/: main
install/zsh/: main
inventory/: default.yaml  password.yaml.example  remote.yaml.example
lib/: .gitignore  generate.py
load/alias/: main
load/apt/: main
load/docker/: main
load/git/: main
load/golang/: main
load/node/: main
load/nvm/: main
load/proxy/: main
load/pyenv/: main
load/python/: main
load/ruby/: main
load/ssh/: main
load/vagrant/: main
load/vim/: main
load/zsh/: README.md  main  update_local.sh
load/zsh/settings/: Common  Docker  WSL  custom
nodejs/: README.md
nvm/: README.md
pkg/include/myPython/: README.md  common.py
pkg/source/: halo.c  learn.c
playbooks/: node.yml  workstation.yml
roles/ai_tools/defaults/: main.yml
roles/ai_tools/meta/: envmgr.yml
roles/ai_tools/tasks/: ai_tools.yml  check_tool_version.yml  claude_code.yml  codex.yml  install_ai_tool.yml  load_local_config.yml  main.yml  manage_basic_ai_tool.yml  rtk.yml  show_tool_summary.yml  summarize_ai_tool.yml
roles/ai_tools/vars/: main.yml
roles/cloud/handlers/: main.yml
roles/cloud/meta/: envmgr.yml
roles/cloud/tasks/: aws.yml  main.yml  terraform.yml
roles/cloud/vars/: main.yml
roles/docker/handlers/: main.yml
roles/docker/meta/: envmgr.yml
roles/docker/tasks/: docker.yml  main.yml
roles/dotnet/meta/: envmgr.yml
roles/dotnet/tasks/: dotnet.yml
roles/dotnet/vars/: main.yml
roles/golang/meta/: envmgr.yml
roles/golang/tasks/: golang.yml  main.yml
roles/golang/vars/: main.yml
roles/init/defaults/: main.yml
roles/init/meta/: envmgr.yml
roles/init/tasks/: directories.yml  git.yml  github_cli.yml  install_python.yml  main.yml  sshkey.yml  sync_time.yml  upgrade_git.yml
roles/init/vars/: main.yml
roles/init_core/meta/: envmgr.yml
roles/init_core/tasks/: main.yml
roles/java/meta/: envmgr.yml
roles/java/tasks/: java.yml  main.yml
roles/k8s/tasks/: cluster.yml  helm.yml  k8s.yml  kubeadm.yml  main.yml  master.yml  prework.yml
roles/k8s/vars/: main.yml
roles/kubeadm/handlers/: main.yml
roles/kubeadm/meta/: envmgr.yml
roles/kubeadm/tasks/: cluster.yml  kubeadm.yml  main.yml
roles/kubeadm/vars/: main.yml
roles/kubernetes_tools/meta/: envmgr.yml
roles/kubernetes_tools/tasks/: dependencies.yml  helm.yml  kubectl.yml  main.yml  tools.yml
roles/kubernetes_tools/vars/: main.yml
roles/minikube/meta/: envmgr.yml
roles/minikube/tasks/: main.yml  minikube.yml
roles/minikube/vars/: main.yml
roles/monitoring/meta/: envmgr.yml
roles/monitoring/tasks/: kube-prometheus-stack.yml  main.yml
roles/monitoring/vars/: main.yml
roles/node/meta/: envmgr.yml
roles/node/tasks/: main.yml  node.yml
roles/node/vars/: main.yml  stephdewit.nvm.yml
roles/python/meta/: envmgr.yml
roles/python/tasks/: conda.yml  main.yml  python.yml
roles/python/vars/: main.yml
roles/ruby/meta/: envmgr.yml
roles/ruby/vars/: rvm.ruby.yml
scaffolds/role/: README.md
scripts/: __init__.py  catalog.py  command_text.py  main.py  runtime_config.py  smoke_checks.py  template.py  wsl.sh
scripts/add_new_user/: add_new_user.sh
scripts/apt/: go.mod  set_apt_mirror.go  set_apt_mirror.sh  source.JSON
scripts/commands/: __init__.py  ansible_check.py  create.py  dev_shared.py  doctor.py  history.py  install.py  legacy_argparse.py  lint.py  ping.py  self_management.py  setup.py  shared.py  smoke_test.py  typecheck.py  validate.py
scripts/hosts/: README.md
scripts/services/: __init__.py  assets.py  doctor.py  install.py  runtime.py  self_management.py
scripts/set_apt_mirror/: go.mod  main.go  source.yaml
scripts/smoke_checks/: __init__.py  catalog.py  cli.py  doctor_history.py  helpers.py  install.py  runtime.py  suite.py
scripts/yum/: README.md  set_centos6_yum.sh  set_centos7_yum.sh
src/envmgr/: __init__.py  command_text.py  main.py  runtime_config.py  scaffold.py
tests/: support.py  test_catalog.py  test_cli_contracts.py  test_docs_contracts.py  test_doctor_history.py  test_install.py  test_installer.py  test_ping.py  test_release_surface.py  test_runtime_config.py  test_runtime_services.py  test_self_management.py  test_smoke.py
tests/checks/: catalog.py  cli.py  docs_contracts.py  doctor_history.py  install.py  installer.py  ping.py  release_surface.py  runtime.py  self_management.py
vars/: gantsign.oh-my-zsh.yml  global.yml
vim/: vimrc
wsl/: perpare_for_wsl2.sh
yum/: README.md
zsh/: .zshrc  README.md  bak_for_zshrc  sync_bak.sh  update_local.sh  zshrc-push.sh  zshrc-update.sh  zshrc.bak
zsh/bak_for_zshrc/: Docker  Remote  ubuntu_docker  wsl
zsh/settings/: Common  Docker  Remote  wsl
(+42 files in other folders)
