[project]
name = "envmgr"
version = "0.1.0"
description = "Quick deployment to install and configure packages with ansible."
dependencies = [
    "ansible>=10.0.0",
    "kubernetes>=31.0.0",
    "rich>=13.9.4",
    "tomli>=2.2.1; python_version < '3.11'",
    "typer>=0.15.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ansible-lint>=25.1.2",
    "envmgr-dev-helpers",
    "mypy>=1.15.0",
    "pre-commit>=4.0.0",
    "types-PyYAML>=6.0.0",
    "ruff>=0.8.0",
]

[tool.uv.sources]
envmgr-dev-helpers = { path = "dev-helpers" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    "/scripts",
    "/playbooks",
    "/roles",
    "/vars",
    "/ansible.cfg",
    "/requirements.yaml",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.hatch.build.targets.wheel.force-include]
"ansible.cfg" = "scripts/_assets/ansible.cfg"
"requirements.yaml" = "scripts/_assets/requirements.yaml"
"playbooks" = "scripts/_assets/playbooks"
"roles" = "scripts/_assets/roles"
"vars" = "scripts/_assets/vars"

[project.scripts]
envmgr = "scripts.main:main"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
