[project]
name = "envmgr-dev-helpers"
version = "0.1.0"
description = "Repo-local developer helper entry points for envmgr."
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
create = "envmgr.commands.create:main"
lint = "envmgr.commands.lint:main"
ansible-check = "envmgr.commands.ansible_check:main"
typecheck = "envmgr.commands.typecheck:main"
validate = "envmgr.commands.validate:main"
smoke-test = "envmgr.commands.smoke_test:main"

[tool.hatch.build.targets.wheel]
packages = ["dev_helpers"]
